--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@voken/base32",
-  "version": "1.1.4",
+  "version": "1.1.6",
   "description": "VOKEN Flavored Base32 Encoding and Decoding, with the checksum by default.",
   "keywords": [
     "base32",
@@ -30,7 +30,7 @@
     "tape": "^5.0.1"
   },
   "dependencies": {
-    "safe-buffer": "^5.2.1"
+    "@voken/sha": "^1.0.1"
   },
   "scripts": {
     "standard": "standard",
