--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@voken/base32",
-  "version": "1.1.6",
+  "version": "1.3.1",
   "description": "VOKEN Flavored Base32 Encoding and Decoding, with the checksum by default.",
   "keywords": [
     "base32",
@@ -26,11 +26,12 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "devDependencies": {
+    "@types/node": "^14.14.16",
     "standard": "^16.0.3",
     "tape": "^5.0.1"
   },
   "dependencies": {
-    "@voken/sha": "^1.0.1"
+    "@voken/sha": "^1.1.0"
   },
   "scripts": {
     "standard": "standard",
