--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@voken/base32",
-  "version": "1.3.3",
+  "version": "1.4.0",
   "description": "VOKEN Flavored Base32 Encoding and Decoding, with the checksum by default.",
   "keywords": [
     "base32",
@@ -30,9 +30,7 @@
     "standard": "^16.0.3",
     "tape": "^5.0.1"
   },
-  "dependencies": {
-    "@voken/sha": "^1.1.9"
-  },
+  "dependencies": {},
   "scripts": {
     "standard": "standard",
     "test": "npm run standard && npm run unit",
